# csi

./: CDM.py  EDKSmp.py  Fault.py  MANIFEST.in  Mogi.py  Pressure.py  README.md  RectangularPatches.py  RectangularPatchesKin.py  SourceInv.py  SourceInv.py.bck  TODO  TriangularPatches.py  TriangularPatches.py.bck  TriangularPatches.py.save  TriangularTents.py  Yang.py  __init__.py  beachball.py  commenting.txt  creepmeters.py  csi_environment.yml  csiutils.py  dippingfault.py  eulerPoleUtils.py  explorefault.py  fault3D.py  faultpostproc.py  faultpostproc.py.bck  faultpostproctents.py  faultwithdip.py  faultwithvaryingdip.py  gebco.py  geodeticplot-mod.py  geodeticplot.py  geodeticplot.py.bck  gmt.conf  gps.py  gps.py.bck  gpstimeseries.py  (+31 more)
csi/: Block.py  CDM.py  CDMfull.py  EDKSmp.py  Fault.py  Mogi.py  MultiBlock.py  Pressure.py  RectangularPatches.py  RectangularPatchesKin.py  SourceInv.py  SurfaceMotion.py  TriangularPatches.py  TriangularTents.py  Yang.py  __init__.py  dippingfault.py  eulerPoleUtils.py  fault3D.py  faultpostproctents.py  faultwithdip.py  faultwithvaryingdip.py  functionfit.py  geodeticplot.py  gps.py  gpstimeseries.py  imagecovariance.py  imagedownsampling.py  insar.py  insartimeseries.py  mogifull.py  multigps.py  multisourcesolve.py  okadafull.py  opticorr.py  pCDM.py  pCDMfull.py  planarfault.py  planarfaultkinematic.py  seismic.py  (+14 more)
deprecated/: EDKS.py  gpssopactimeseries.py  gpsstation.py  sopac.py
documentation/: CSIpublications.rst  basictutorials.rst  classes.rst  conf.py  faultclasses.rst  index.rst  installation.rst  miscclasses.rst  (+3 more)
(+259 files in other folders)
