[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csi"
version = "1.0.0"
description = "Classic Slip Inversion"
readme = "README.md"
requires-python = ">=3.9, <4"
authors = [{ name = "Romain Jolivet" }]
dependencies = ["numpy", "scipy", "cartopy", "shapely", "pyproj", "matplotlib"]

[project.optional-dependencies]
docs = ["netcdf4", "h5py"]

[tool.hatch.version]
path = "csi/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/csi"]

